# codex-for-open-source

apps/codex-oss-clone/: README.md  package-lock.json  package.json
apps/codex-oss-clone/backend/: main.py  no_runner.py
apps/codex-oss-clone/public/: app.js  index.html  styles.css
apps/codex-oss-clone/scripts/: install-macos-app.sh  start-cli-backend.sh  stop-cli-backend.sh  stop-server.sh
apps/codex-oss-clone/src/: server.js
codex-rs/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  events.rs  lib.rs  reducer.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  lib.rs
codex-rs/aws-auth/: Cargo.toml
codex-rs/aws-auth/src/: lib.rs  signing.rs
codex-rs/cli/src/: main.rs
codex-rs/codex-api/src/: api_bridge.rs  api_bridge_tests.rs  auth.rs  files.rs
codex-rs/codex-client/src/: request.rs
codex-rs/codex-mcp/src/: mcp_connection_manager.rs
codex-rs/config/src/: tui_keymap.rs  types.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: codex_apps_library_download.rs  filesystem_deny_read.rs  mcp_openai_file.rs  realtime_conversation.rs  turn_metadata.rs
codex-rs/device-key/src/: lib.rs  platform.rs
codex-rs/exec-server/src/: client.rs  environment.rs  lib.rs  protocol.rs  remote_file_system.rs
codex-rs/exec/src/: cli.rs  lib.rs
codex-rs/linux-sandbox/src/: bwrap.rs
codex-rs/login/src/: api_bridge.rs
codex-rs/model-provider-info/src/: lib.rs  model_provider_info_tests.rs
codex-rs/model-provider/src/: aws_auth_provider.rs  lib.rs
(+71 files in other folders)
